Add nuget packages

--- a/EngraveMemory/EngraveMemory.csproj
+++ b/EngraveMemory/EngraveMemory.csproj
@@ -1,15 +1,35 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DebugType>pdbonly</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.618610" />
+    <PackageReference Include="ReactiveUI" Version="10.3.6" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
+    <PackageReference Include="ReactiveUI.Fody" Version="10.3.6" />
+    <PackageReference Include="Xam.Plugins.Notifier" Version="3.0.1" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="1.1.5.188" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="DevsTeam.Framework.Autofac" Version="1.0.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="MemorialList\MemorialFilterView.xaml">
+      <SubType>Designer</SubType>
+      <Generator></Generator>
+    </Page>
+    <Page Include="MemorialList\ProgressItemView.xaml">
+      <SubType>Designer</SubType>
+      <Generator></Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="MemorialList\ProgressItemlView.xaml.cs">
+      <DependentUpon>ProgressItemView.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
